k8s/minio-console-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-node-port
spec:
  type: NodePort
  selector:
    component: minio
  ports:
    - port: 3001
      targetPort: 9001
      nodePort: 31111
