k8s/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      component: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        component: minio
    spec:
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: minio-pv-claim
      containers:
        - name: minio
          image: andrmantz/fission-minio:latest
          command: ["/entrypoint.sh"]
          resources:
            limits:
              memory: "128Mi"
              cpu: "50m"
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
            - name: storage
              mountPath: "/data"

---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: minio-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: minio
  ports:
    - port: 9000
      targetPort: 9000
